--- a/index.html
+++ b/index.html
@@ -3,100 +3,149 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
     <title>IbagueJS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/darkly/bulmaswatch.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <style>
+      .is-js, 
+      .has-background-js{
+        background: #ffe400 !important;
+        border-color: #ffe400 !important;
+      }
+      .has-background-js-primary{
+        background: #375a7f !important;
+        border-color: #375a7f !important;
+      }
+      .has-padding{
+        padding-left: 5%;
+        padding-right: 7%;
+      }
+      .image-128x128{
+        width: 128px !important;
+        height: 128px !important;
+        margin-left: 5px;
+      }
+    </style>
   </head>
   <body>
-    <!-- Header --!>
-    <section class="hero is-info is-large">
+    <!-- Header -->
+    <section class="hero is-js is-large">
       <div class="hero-body">
         <div class="container has-text-centered">
-          <h1 class="title">
-            [LOGO HERE]
+          <h1 class="title has-text-dark">
+            <img src="assets/logo.png" alt="Logo IbagueJS">
           </h1>
-          <h2 class="subtitle">
+          <h2 class="subtitle has-text-dark">
             Comunidad JavaScript de Ibague
           </h2>
         </div>
       </div>
     </section>
-    <!-- Event list --!>
-    <section class="section has-text-centered">
-      <div class="container">
-        <h1 class="title">
-          Proximos Eventos
-        </h1>
-        <div class="box">
-          <article class="media">
-            <div class="media-content">
-              <div class="content has-text-centered">
-                <h3>
-                  No hay proximos eventos programados 💔
-                </h3>
+    <!-- Event list -->
+      <section class="section has-text-centered">
+        <div class="container">
+          <h1 class="title">
+            Proximos Eventos
+          </h1>
+          <div id="events_upcoming">
+            <div v-if="events_upcoming.length">
+              <div v-for="event in events_upcoming" class="box">
+                <a v-bind:href="event.link" target="new">
+                  <article class="media">
+                    <div class="media-content">
+                      <div class="content">
+                        <h2>{{event.name}}</h2>
+                        <div class="has-text-light has-padding" v-html="event.description"></div>
+                      </div>
+                      <nav class="level is-mobile">
+                        <div class="level-left">
+                          <div class="tags">
+                            <span class="tag is-success">
+                              Asistentes: {{event.yes_rsvp_count}}
+                            </span>
+                            <span class="tag is-info">
+                              Lugar: {{event.venue.name}}
+                            </span>
+                            <span class="tag is-info">
+                              Fecha/Hora: {{event.local_date}} / {{event.local_time}}
+                            </span>
+                          </div>
+                        </div>
+                      </nav>
+                    </div>
+                  </article>
+                </a>
               </div>
             </div>
-          </article>
-        </div>
-        <span class="tag is-primary">
-          Quieres proponer/exponer una charla? Abre un issue en nuestro
-          repositorio de <a
-          href="https://github.com/IbagueJS/charlas">Github</a> con tu
-          propuesta.
-        </span>
-        <br/>
-        <br/>
-        <h1 class="title">
-          Eventos Pasados
-        </h1>
-        <div class="box">
-          <article class="media">
-            <div class="media-content">
-              <div class="content has-text-centered">
-                <h2>Titulo Evento</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
-                </p>
-              </div>
-              <nav class="level is-mobile">
-                <div class="level-left">
-                  <div class="tags">
-                    <span class="tag is-success">
-                      Asistentes: ##
-                    </span>
-                    <span class="tag is-info">
-                      Lugar: ##
-                    </span>
-                    <span class="tag is-info">
-                      Fecha/Hora: ##
-                    </span>
+            <div v-else class="box">
+              <article class="media">
+                <div class="media-content">
+                  <div class="content has-text-centered">
+                    <h3>
+                      No hay proximos eventos programados 💔
+                    </h3>
                   </div>
                 </div>
-              </nav>
+              </article>
             </div>
-          </article>
+          </div>
+          <br/>
+          <div class="box has-background-js-primary">
+            <article class="media">
+              <div class="media-content">
+                <div class="content is-info has-text-centered">
+                  <h5>
+                    ¿Quieres proponer/exponer una charla? Abre un issue en nuestro
+                    repositorio de <a href="https://github.com/IbagueJS/charlas"> Github </a> con tu
+                    propuesta.
+                  </h5>
+                </div>
+              </div>
+            </article>
+          </div>
+          <br/>
+          <br/>
+          <h1 class="title">
+            Eventos Pasados
+          </h1>
+          <div id="events_past">
+            <div v-for="event in events_past" class="box">
+              <a v-bind:href="event.link" target="new">
+                <article class="media">
+                  <div class="media-content">
+                    <div class="content">
+                      <h4><span class="tag is-info">{{event.local_date}}</span> {{event.name}}  </h4>
+                    </div>
+                  </div>
+                </article>
+              </a>
+            </div>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    
     <!-- About -->
-    <section class="section has-text-centered has-background-info">
+    <section class="section has-text-centered has-background-js">
       <div class="container">
-        <h1 class="title">Acerca de IbagueJS</h1>
-        <p>
+        <h1 class="title has-text-dark">Acerca de IbagueJS</h1>
+        <p class="has-text-dark">
           Acércate y aprende con nosotros, IbaguéJS es un espacio gratuito y
           libre para aprender y compartir conocimiento sobre JavaScript.
-          Nos regimos bajo un <a
+          Nos regimos bajo un <strong><a
           href="https://github.com/colombia-dev/codigo-de-conductad"
-          class="has-text-dark">Código de Conducta</a> que aplica a los integrantes,
+          class="has-text-dark">Código de Conducta</a></strong> que aplica a los integrantes,
           asistentes, patrocinadores y organizadores del grupo, esto con el
           objetivo de propiciar un ambiente sin acoso e inclusivo, al hacer
-          parte de este grupo entendemos que estás de acuerdo con nuestro <a
+          parte de este grupo entendemos que estás de acuerdo con nuestro <strong><a
           href="https://github.com/colombia-dev/codigo-de-conductad"
-          class="has-text-dark">Código de Conducta.</a>
+          class="has-text-dark">Código de Conducta.</a></strong>
         </p>
         <br />
-        <p class="">
+        <p class="has-text-dark">
           Nuestra filosofía será siempre la de mantener un ambiente informal,
           nada estricto en ningún sentido. Así que cualquier colaboración, en
           cualquier sentido, será muy bien recibida.
@@ -107,42 +156,85 @@
     <section class="section has-text-centered">
       <div class="container">
         <h1 class="title">Equipo Organizador</h1>
-        <h2 class="subtitle">
-          TBD
-        </h2>
+        <div id="organizers" class="columns is-desktop">
+          <div v-for="organizer in organizers" class="column is-one-third-desktop ">
+            <a v-bind:href="organizer.group_profile.link" target="new"> 
+              <div class="card">
+                <nav style="padding-top: 10px;" class="level">
+                  <div class="card-image level-item has-text-centered">
+                    <figure class='image is-128x128'>
+                      <img class="image-128x128" v-bind:src="organizer.photo.photo_link" alt="Image-organizer">
+                    </figure>
+                  </div>
+                </nav>
+                <div class="card-content">
+                  <div class="media">
+                    <div class="media-content">
+                      <p class="title is-4">{{organizer.name}}</p>
+                      <p class="subtitle is-6">{{organizer.group_profile.role === "organizer" ? "Organizador" : organizer.group_profile.role === "assistant_organizer" ? "Asistente Organizador" : organizer.group_profile.role}}</p>
+                    </div>
+                  </div>
+                  <div class="content">
+                    {{organizer.bio}}
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>  
+        </div>
       </div>
     </section>
     <!-- Sponsors -->
     <section class="section has-text-centered">
       <div class="container">
         <h1 class="title">Patrocinadores</h1>
-        <h2 class="subtitle">
-          TBD
-        </h2>
+        <div class="columns is-mobile is-centered">
+          <div class="column  is-one-third-desktop">
+            <a href="https://nodesource.com/" target="_blank">
+              <figure class="image">
+                <img style="max-height: 250px;" src="assets/node-source.png">
+              </figure>
+            </a>
+          </div>
+          <div class="column  is-one-third-desktop">
+            <a href="https://colombia-dev.org" target="_blank">
+              <figure class="image">
+                <img style="max-height: 250px;" src="assets/colombia-dev.svg">
+              </figure>
+            </a>
+          </div>
+          <div class="column  is-one-third-desktop">
+            <a href="http://www.sti.org.co/" target="_blank">
+              <figure class="image">
+                <img style="max-height: 250px;" src="http://www.sti.org.co/images/plantilla/logo-sti.png">
+              </figure>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
-    <!-- Footer --!>
-    <section class="section has-text-centered has-background-info">
+    <!-- Footer -->
+    <section class="section has-text-centered has-background-js">
       <div class="container">
-        <a class="button is-info" href="https://twitter.com/IbagueJS"
+        <a class="button is-js has-text-dark" href="https://twitter.com/IbagueJS"
         target="_blank">
           <span class="icon is-small">
             <i class="fab fa-twitter"></i>
           </span>
         </a>
-        <a class="button is-info" href="https://meetup.com/IbagueJS"
+        <a class="button is-js has-text-dark" href="https://meetup.com/IbagueJS"
         target="_blank">
           <span class="icon is-small">
             <i class="fab fa-meetup"></i>
           </span>
         </a>
-        <a class="button is-info" href="https://goo.gl/KKgcce"
+        <a class="button is-js has-text-dark" href="https://goo.gl/KKgcce"
         target="_blank">
           <span class="icon is-small">
             <i class="fab fa-slack"></i>
           </span>
         </a>
-        <a class="button is-info" href="https://githubb.com/IbagueJS"
+        <a class="button is-js has-text-dark" href="https://github.com/IbagueJS"
         target="_blank">
           <span class="icon is-small">
             <i class="fab fa-github"></i>
