--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#ffe400" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
+    <meta name="description" content="Comunidad JavaScript de Ibagué" />
+    <meta
+      name="keywords"
+      content="ibaguejs, javascript, ibagué, js, comunidad, meetup"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="ibaguejs.com" />
+    <meta property="og:title" content="IbagueJS" />
+    <meta property="og:description" content="Comunidad JavaScript de Ibagué" />
+    <meta
+      property="og:image"
+      content="http://ibaguejs.com/assets/favicon.png"
+    />
     <title>IbagueJS</title>
     <script
       defer
@@ -14,8 +27,8 @@
   <body>
     <noscript>
       <strong
-        >We're sorry but IbagueJS doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
+        >Lo sentimos, pero IbagueJS no funciona correctamente sin JavaScript
+        habilitado. Por favor, actívelo para continuar.</strong
       >
     </noscript>
     <div id="app"></div>
